# exercise_segment_api

./: CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.fast  Dockerfile.simple  ExerciseSegmentAPI.podspec  INTEGRATION_GUIDE.md  LICENSE  PROJECT_SUMMARY.md  README.md  README_DOCKER.md  SWIFT_USAGE.md  check_pose_diff.c  create_test_json.c  demo.sh  docker-compose.yml  test_foot_center.c  test_joint_calibration.c  test_json_load.c  test_mid_joint_analysis.c  test_mid_progress.c  test_real_json_poses.c  test_realtime_feedback.c  test_simple_feedback.c  test_workout.json
build_test/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  example_basic  libexercise_segment.dylib  realtime_demo  test_calibration
examples/: basic_example.c  basic_example_old.c  joint_analysis_demo.c  mid.json  realtime_demo.c  smart_demo.c  top.json
include/: ExerciseSegmentAPI-Bridging-Header.h  ExerciseSegmentAPI.modulemap  calibration.h  math_utils.h  pose_analysis.h  segment_api.h  segment_types.h
ios_app/: ExerciseSegmentManager.swift
ios_example/: Podfile
python_example/: example.py  exercise_segment.py
src/: calibration.c  math_utils.c  pose_analysis.c  segment_core.c
swift/: ExerciseSegmentAPI+Swift.swift
swift_example/: ExerciseSegment.swift  ExerciseSegmentExample.swift
tests/: test_calibration.c  test_math_utils.c  test_pose_analysis.c
